#9 Updated NSF* + bulk edits

--- a/docs/api-reference/CRMScript.Global.Void.yml
+++ b/docs/api-reference/CRMScript.Global.Void.yml
@@ -915,7 +915,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getAgentId(String)
   fullName: CRMScript.Global.Void.getAgentId(String)
   type: Method
-  summary: "\nInteger getAgentId(String idString)Returns the id of the agent matching the idString parameter<p></p>\n<ul><li><strong>idString:</strong>The id string of the agent</li></ul>\n"
+  summary: "\nInteger getAgentId(String idString)Returns the ID of the agent matching the idString parameter<p></p>\n<ul><li><strong>idString:</strong>The id string of the agent</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer getAgentId(String idString)
@@ -936,7 +936,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getAgentScheduleId(String)
   fullName: CRMScript.Global.Void.getAgentScheduleId(String)
   type: Method
-  summary: "\nInteger getAgentScheduleId(String name)Returns the id of the agent schedule with the given name. -1 if no agent schedule was found<p></p>\n<ul><li><strong>name:</strong>Name of the agent schedule</li></ul>\n"
+  summary: "\nInteger getAgentScheduleId(String name)Returns the ID of the agent schedule with the given name. -1 if no agent schedule was found<p></p>\n<ul><li><strong>name:</strong>Name of the agent schedule</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer getAgentScheduleId(String name)
@@ -1259,7 +1259,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getDocumentId(String)
   fullName: CRMScript.Global.Void.getDocumentId(String)
   type: Method
-  summary: "\nInteger getDocumentId(String name)Returns the id of the document with the given name. -1 if no agent schedule was found<p></p>\n<ul><li><strong>name:</strong>Name of the document</li></ul>\n"
+  summary: "\nInteger getDocumentId(String name)Returns the ID of the document with the given name. -1 if no agent schedule was found<p></p>\n<ul><li><strong>name:</strong>Name of the document</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer getDocumentId(String name)
@@ -1995,7 +1995,7 @@ It will throw an AssertException if &quot;condition&quot; is false. The exceptio
   nameWithType: Void.getPriorityIdFromName(String)
   fullName: CRMScript.Global.Void.getPriorityIdFromName(String)
   type: Method
-  summary: "\nInteger getPriorityIdFromName(String p0)Returns the id of the priority with the given name.\n"
+  summary: "\nInteger getPriorityIdFromName(String p0)Returns the ID of the priority with the given name.\n"
   remarks: 
   syntax: 
     content: Integer getPriorityIdFromName(String p0)
@@ -2326,7 +2326,7 @@ progId can be:<p></p>\n<ul><li>modNull       = 0x00000000,</li><li>modTicket    
   nameWithType: Void.getScreenElementId(Integer)
   fullName: CRMScript.Global.Void.getScreenElementId(Integer)
   type: Method
-  summary: "\nInteger getScreenElementId(Integer index)This function can only be called from a screen definition, it will fail if called from a regular script.<p></p>\nIt returns the id of the screen element with the given index in the current screen definition.<p></p>\nThe index can be retrieved with<code>getHtmlElementIndex(elementName)</code>.\n"
+  summary: "\nInteger getScreenElementId(Integer index)This function can only be called from a screen definition, it will fail if called from a regular script.<p></p>\nIt returns the ID of the screen element with the given index in the current screen definition.<p></p>\nThe index can be retrieved with<code>getHtmlElementIndex(elementName)</code>.\n"
   remarks: 
   syntax: 
     content: Integer getScreenElementId(Integer index)
@@ -2389,7 +2389,7 @@ progId can be:<p></p>\n<ul><li>modNull       = 0x00000000,</li><li>modTicket    
   nameWithType: Void.getScriptId(String)
   fullName: CRMScript.Global.Void.getScriptId(String)
   type: Method
-  summary: "\nInteger getScriptId(String idString)Returns the id of the script matching the idString parameter<p></p>\n<ul><li><strong>idString:</strong>The id string of the script</li></ul>\n"
+  summary: "\nInteger getScriptId(String idString)Returns the ID of the script matching the idString parameter<p></p>\n<ul><li><strong>idString:</strong>The id string of the script</li></ul>\n"
   remarks: 
   syntax: 
     content: Integer getScriptId(String idString)
@@ -2708,7 +2708,7 @@ as long as a session lives. That is until a user logs out.\n"
   nameWithType: Void.langToId(String)
   fullName: CRMScript.Global.Void.langToId(String)
   type: Method
-  summary: "\nInteger langToId(String langCode)Returns the id of the given language code.<p></p>\nIf no match, it returns 0 (which is Norwegian)\n"
+  summary: "\nInteger langToId(String langCode)Returns the ID of the given language code.<p></p>\nIf no match, it returns 0 (which is Norwegian)\n"
   remarks: 
   syntax: 
     content: Integer langToId(String langCode)
@@ -3212,7 +3212,7 @@ as long as a session lives. That is until a user logs out.\n"
   nameWithType: Void.saveCgiAttachment(String)
   fullName: CRMScript.Global.Void.saveCgiAttachment(String)
   type: Method
-  summary: "\nInteger saveCgiAttachment(String p_varName)Will save the attachment in cgi variable with the name given in p_varName and return the id of the attachment record in the attachment table.\n"
+  summary: "\nInteger saveCgiAttachment(String p_varName)Will save the attachment in cgi variable with the name given in p_varName and return the ID of the attachment record in the attachment table.\n"
   remarks: 
   syntax: 
     content: Integer saveCgiAttachment(String p_varName)
