--- a/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
+++ b/docs/api-reference/CRMScript.Native.InvoiceEntry.yml
@@ -108,7 +108,7 @@ items:
   fullName: CRMScript.Native.InvoiceEntry.getValue(String)
   type: Method
   summary: "\nGets the value of the specified field.\n"
-  remarks: "Available fields:<ul><li>messageId the id which this invoice entry is connected to</li><li>description the descriptive text of this invoice entry</li><li>type id of the type for this invoice entry</li><li>quantity the number of units invoiced</li><li>pricePrUnit price per unit (precision 2)</li><li>discount discount in percentage for this invoice entry (precision 2)</li><li>discountMoney discount in money (precision 2)</li><li>date the date for this invoice entry</li></ul>"
+  remarks: "Available fields:<ul><li>messageId the id which this invoice entry is connected to</li><li>description the descriptive text of this invoice entry</li><li>type ID of the type for this invoice entry</li><li>quantity the number of units invoiced</li><li>pricePrUnit price per unit (precision 2)</li><li>discount discount in percentage for this invoice entry (precision 2)</li><li>discountMoney discount in money (precision 2)</li><li>date the date for this invoice entry</li></ul>"
   syntax: 
     content: String getValue(String field)
     parameters:
@@ -234,7 +234,7 @@ items:
   fullName: CRMScript.Native.InvoiceEntry.setValue(String,String)
   type: Method
   summary: "\nSets a field of the current InvoiceEntry object with the given value.\n"
-  remarks: "\nAvailable fields:<ul><li>messageId the id of the message which this invoice entry is connected to</li><li>description a description of the invoice entry</li><li>type the id of the type which this invoice entry will be saved as</li><li>quantity number of invoiced unites (this can be a float value)</li><li>pricePrUnit price pr. unit (this can be a float value of precision 2)</li><li>discount discount given in percentage (float value of precision 2). If discountMoney is also specified, this field will be ignored</li><li>discountMoney discount in money</li><li>date the date of the invoice entry</li></ul>\n"
+  remarks: "\nAvailable fields:<ul><li>messageId the ID of the message which this invoice entry is connected to</li><li>description a description of the invoice entry</li><li>type the ID of the type which this invoice entry will be saved as</li><li>quantity number of invoiced unites (this can be a float value)</li><li>pricePrUnit price pr. unit (this can be a float value of precision 2)</li><li>discount discount given in percentage (float value of precision 2). If discountMoney is also specified, this field will be ignored</li><li>discountMoney discount in money</li><li>date the date of the invoice entry</li></ul>\n"
   syntax: 
     content: Void setValue(String field, String value)
     parameters:
