--- a/docs/api-reference/CRMScript.NetServer.NSDocument.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSDocument.yml
@@ -300,7 +300,7 @@ items:
     parameters: []
     return:
       type: CRMScript.Global.String
-      description: Our reference, searchable field from freetext search
+      description: Our reference, searchable field from free-text search
   example: 
   - "\n<pre><code>NSDocument thing;\nString ourRef = thing.GetOurRef();</code></pre>\n"
 - uid: CRMScript.NetServer.NSDocument.GetPersonFullName()
@@ -680,7 +680,7 @@ items:
     parameters:
     - id: ourRef
       type: CRMScript.Global.String
-      description: Our reference, searchable field from freetext search
+      description: Our reference, searchable field from free-text search
     return:
       type: CRMScript.Global.Void
   example: 
