--- a/docs/api-reference/CRMScript.NetServer.NSFavourite.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFavourite.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFavourite.#ctor
   - CRMScript.NetServer.NSFavourite.GetAssociateId()
   - CRMScript.NetServer.NSFavourite.GetExtraInfo()
   - CRMScript.NetServer.NSFavourite.GetRank()
   - CRMScript.NetServer.NSFavourite.GetRecordId()
   - CRMScript.NetServer.NSFavourite.GetTableName()
-  - CRMScript.NetServer.NSFavourite.#ctor
   - CRMScript.NetServer.NSFavourite.SetAssociateId(Integer)
   - CRMScript.NetServer.NSFavourite.SetExtraInfo(String)
   - CRMScript.NetServer.NSFavourite.SetRank(Integer)
@@ -23,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFavourite.GetAssociateId()
-  commentId: M:CRMScript.NetServer.NSFavourite.GetAssociateId()
-  id: 'GetAssociateId()'
-  so.intellisense: NSFavourite.GetAssociateId
-  langs:
-  - crmscript
-  name: 'GetAssociateId()'
-  nameWithType: NSFavourite.GetAssociateId()
-  fullName: CRMScript.NetServer.NSFavourite.GetAssociateId()
-  type: Method
-  summary: "\nID of the associate this favourite belongs to.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetAssociateId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFavourite thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFavourite.GetExtraInfo()
-  commentId: M:CRMScript.NetServer.NSFavourite.GetExtraInfo()
-  id: 'GetExtraInfo()'
-  so.intellisense: NSFavourite.GetExtraInfo
-  langs:
-  - crmscript
-  name: 'GetExtraInfo()'
-  nameWithType: NSFavourite.GetExtraInfo()
-  fullName: CRMScript.NetServer.NSFavourite.GetExtraInfo()
-  type: Method
-  summary: "\nExtra information for this favourite.\n"
-  remarks: 
-  syntax: 
-    content: String GetExtraInfo()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFavourite thing;\nString extraInfo = thing.GetExtraInfo();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFavourite.GetRank()
-  commentId: M:CRMScript.NetServer.NSFavourite.GetRank()
-  id: 'GetRank()'
-  so.intellisense: NSFavourite.GetRank
-  langs:
-  - crmscript
-  name: 'GetRank()'
-  nameWithType: NSFavourite.GetRank()
-  fullName: CRMScript.NetServer.NSFavourite.GetRank()
-  type: Method
-  summary: "\nRank order\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRank()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFavourite thing;\nInteger rank = thing.GetRank();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFavourite.GetRecordId()
-  commentId: M:CRMScript.NetServer.NSFavourite.GetRecordId()
-  id: 'GetRecordId()'
-  so.intellisense: NSFavourite.GetRecordId
-  langs:
-  - crmscript
-  name: 'GetRecordId()'
-  nameWithType: NSFavourite.GetRecordId()
-  fullName: CRMScript.NetServer.NSFavourite.GetRecordId()
-  type: Method
-  summary: "\nID of the record this favourite belongs to.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetRecordId()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFavourite thing;\nInteger recordId = thing.GetRecordId();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFavourite.GetTableName()
-  commentId: M:CRMScript.NetServer.NSFavourite.GetTableName()
-  id: 'GetTableName()'
-  so.intellisense: NSFavourite.GetTableName
-  langs:
-  - crmscript
-  name: 'GetTableName()'
-  nameWithType: NSFavourite.GetTableName()
-  fullName: CRMScript.NetServer.NSFavourite.GetTableName()
-  type: Method
-  summary: "\nName of the table this favourite belongs to.\n"
-  remarks: 
-  syntax: 
-    content: String GetTableName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFavourite thing;\nString tableName = thing.GetTableName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFavourite.#ctor
   commentId: M:CRMScript.NetServer.NSFavourite.#ctor
   id: '#ctor'
@@ -133,6 +38,106 @@ items:
   syntax: 
     content: NSFavourite
   example: 
+- uid: CRMScript.NetServer.NSFavourite.GetAssociateId()
+  commentId: M:CRMScript.NetServer.NSFavourite.GetAssociateId()
+  id: 'GetAssociateId()'
+  so.intellisense: NSFavourite.GetAssociateId
+  langs:
+  - crmscript
+  name: 'GetAssociateId()'
+  nameWithType: NSFavourite.GetAssociateId()
+  fullName: CRMScript.NetServer.NSFavourite.GetAssociateId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetAssociateId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the associate this favorite belongs to.
+  example: 
+  - "\n<pre><code>NSFavourite thing;\nInteger associateId = thing.GetAssociateId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFavourite.GetExtraInfo()
+  commentId: M:CRMScript.NetServer.NSFavourite.GetExtraInfo()
+  id: 'GetExtraInfo()'
+  so.intellisense: NSFavourite.GetExtraInfo
+  langs:
+  - crmscript
+  name: 'GetExtraInfo()'
+  nameWithType: NSFavourite.GetExtraInfo()
+  fullName: CRMScript.NetServer.NSFavourite.GetExtraInfo()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetExtraInfo()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Extra information for this favorite.
+  example: 
+  - "\n<pre><code>NSFavourite thing;\nString extraInfo = thing.GetExtraInfo();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFavourite.GetRank()
+  commentId: M:CRMScript.NetServer.NSFavourite.GetRank()
+  id: 'GetRank()'
+  so.intellisense: NSFavourite.GetRank
+  langs:
+  - crmscript
+  name: 'GetRank()'
+  nameWithType: NSFavourite.GetRank()
+  fullName: CRMScript.NetServer.NSFavourite.GetRank()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetRank()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Rank order
+  example: 
+  - "\n<pre><code>NSFavourite thing;\nInteger rank = thing.GetRank();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFavourite.GetRecordId()
+  commentId: M:CRMScript.NetServer.NSFavourite.GetRecordId()
+  id: 'GetRecordId()'
+  so.intellisense: NSFavourite.GetRecordId
+  langs:
+  - crmscript
+  name: 'GetRecordId()'
+  nameWithType: NSFavourite.GetRecordId()
+  fullName: CRMScript.NetServer.NSFavourite.GetRecordId()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetRecordId()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: ID of the record this favorite belongs to.
+  example: 
+  - "\n<pre><code>NSFavourite thing;\nInteger recordId = thing.GetRecordId();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFavourite.GetTableName()
+  commentId: M:CRMScript.NetServer.NSFavourite.GetTableName()
+  id: 'GetTableName()'
+  so.intellisense: NSFavourite.GetTableName
+  langs:
+  - crmscript
+  name: 'GetTableName()'
+  nameWithType: NSFavourite.GetTableName()
+  fullName: CRMScript.NetServer.NSFavourite.GetTableName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTableName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of the table this favorite belongs to.
+  example: 
+  - "\n<pre><code>NSFavourite thing;\nString tableName = thing.GetTableName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFavourite.SetAssociateId(Integer)
   commentId: M:CRMScript.NetServer.NSFavourite.SetAssociateId(Integer)
   id: 'SetAssociateId(Integer)'
@@ -143,14 +148,14 @@ items:
   nameWithType: NSFavourite.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSFavourite.SetAssociateId(Integer)
   type: Method
-  summary: "\nID of the associate this favourite belongs to.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
     parameters:
     - id: associateId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the associate this favorite belongs to.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -165,14 +170,14 @@ items:
   nameWithType: NSFavourite.SetExtraInfo(String)
   fullName: CRMScript.NetServer.NSFavourite.SetExtraInfo(String)
   type: Method
-  summary: "\nExtra information for this favourite.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetExtraInfo(String extraInfo)
     parameters:
     - id: extraInfo
       type: CRMScript.Global.String
-      description: 
+      description: Extra information for this favorite.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -187,14 +192,14 @@ items:
   nameWithType: NSFavourite.SetRank(Integer)
   fullName: CRMScript.NetServer.NSFavourite.SetRank(Integer)
   type: Method
-  summary: "\nRank order\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetRank(Integer rank)
     parameters:
     - id: rank
       type: CRMScript.Global.Integer
-      description: 
+      description: Rank order
     return:
       type: CRMScript.Global.Void
   example: 
@@ -209,14 +214,14 @@ items:
   nameWithType: NSFavourite.SetRecordId(Integer)
   fullName: CRMScript.NetServer.NSFavourite.SetRecordId(Integer)
   type: Method
-  summary: "\nID of the record this favourite belongs to.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetRecordId(Integer recordId)
     parameters:
     - id: recordId
       type: CRMScript.Global.Integer
-      description: 
+      description: ID of the record this favorite belongs to.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -231,14 +236,14 @@ items:
   nameWithType: NSFavourite.SetTableName(String)
   fullName: CRMScript.NetServer.NSFavourite.SetTableName(String)
   type: Method
-  summary: "\nName of the table this favourite belongs to.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTableName(String tableName)
     parameters:
     - id: tableName
       type: CRMScript.Global.String
-      description: 
+      description: Name of the table this favorite belongs to.
     return:
       type: CRMScript.Global.Void
   example: 
