--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoBool.yml
@@ -7,33 +7,14 @@ items:
   - crmscript
   children:
   - CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
-  - CRMScript.NetServer.NSFieldInfoBool.#ctor
   - CRMScript.NetServer.NSFieldInfoBool.SetDefaultValue(Bool)
+  - CRMScript.NetServer.NSFieldInfoBool.#ctor
   name: NSFieldInfoBool
   nameWithType: NSFieldInfoBool
   fullName: CRMScript.NetServer.NSFieldInfoBool
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoBool.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoBool.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
-  type: Method
-  summary: "\nDefault boolean value\n"
-  remarks: 
-  syntax: 
-    content: Bool GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoBool thing;\nBool defaultValue = thing.GetDefaultValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoBool.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoBool.#ctor
   id: '#ctor'
@@ -49,6 +30,26 @@ items:
   syntax: 
     content: NSFieldInfoBool
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoBool.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoBool.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoBool.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Default boolean value
+  example: 
+  - "\n<pre><code>NSFieldInfoBool thing;\nBool defaultValue = thing.GetDefaultValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoBool.SetDefaultValue(Bool)
   commentId: M:CRMScript.NetServer.NSFieldInfoBool.SetDefaultValue(Bool)
   id: 'SetDefaultValue(Bool)'
@@ -59,14 +60,14 @@ items:
   nameWithType: NSFieldInfoBool.SetDefaultValue(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoBool.SetDefaultValue(Bool)
   type: Method
-  summary: "\nDefault boolean value\n"
+  summary: ""
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Bool defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.Bool
-      description: 
+      description: Default boolean value
     return:
       type: CRMScript.Global.Void
   example: 
