--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoDynamicLink.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   - CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
   - CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
-  - CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   - CRMScript.NetServer.NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   - CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkName(String)
   - CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkValue(String)
@@ -19,62 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoDynamicLink.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoDynamicLink.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
-  type: Method
-  summary: "\nDefault attachment id value<p></p>\n<ul><li><strong>Returns:</strong>Integer</li></ul>\n"
-  remarks: 
-  syntax: 
-    content: GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
-  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
-  id: 'GetLinkName()'
-  so.intellisense: NSFieldInfoDynamicLink.GetLinkName
-  langs:
-  - crmscript
-  name: 'GetLinkName()'
-  nameWithType: NSFieldInfoDynamicLink.GetLinkName()
-  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
-  type: Method
-  summary: "\nDisplay text for link.\n"
-  remarks: 
-  syntax: 
-    content: String GetLinkName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoDynamicLink thing;\nString linkName = thing.GetLinkName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
-  id: 'GetLinkValue()'
-  so.intellisense: NSFieldInfoDynamicLink.GetLinkValue
-  langs:
-  - crmscript
-  name: 'GetLinkValue()'
-  nameWithType: NSFieldInfoDynamicLink.GetLinkValue()
-  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
-  type: Method
-  summary: "\nURL link value. May contain CS tags to be replaced.\n"
-  remarks: 
-  syntax: 
-    content: String GetLinkValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoDynamicLink thing;\nString linkValue = thing.GetLinkValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.#ctor
   id: '#ctor'
@@ -90,6 +34,65 @@ items:
   syntax: 
     content: NSFieldInfoDynamicLink
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoDynamicLink.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoDynamicLink.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Default attachment ID value
+  example: 
+- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
+  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
+  id: 'GetLinkName()'
+  so.intellisense: NSFieldInfoDynamicLink.GetLinkName
+  langs:
+  - crmscript
+  name: 'GetLinkName()'
+  nameWithType: NSFieldInfoDynamicLink.GetLinkName()
+  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetLinkName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display text for link.
+  example: 
+  - "\n<pre><code>NSFieldInfoDynamicLink thing;\nString linkName = thing.GetLinkName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
+  id: 'GetLinkValue()'
+  so.intellisense: NSFieldInfoDynamicLink.GetLinkValue
+  langs:
+  - crmscript
+  name: 'GetLinkValue()'
+  nameWithType: NSFieldInfoDynamicLink.GetLinkValue()
+  fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.GetLinkValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetLinkValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: URL link value. May contain CS tags to be replaced.
+  example: 
+  - "\n<pre><code>NSFieldInfoDynamicLink thing;\nString linkValue = thing.GetLinkValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   commentId: M:CRMScript.NetServer.NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   id: 'SetDefaultValue(Integer)'
@@ -100,12 +103,12 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault attachment id value<p></p>\n<ul><li><strong>DefaultValue:</strong>Integer</li><li><strong>Returns:</strong>Void</li></ul>\n"
+  summary: "\nDefault attachment ID value<p></p>\n<ul><li><strong>DefaultValue:</strong>Integer</li><li><strong>Returns:</strong>Void</li></ul>\n"
   remarks: 
   syntax: 
-    content: Void SetDefaultValue(Integer p_0)
+    content: Void SetDefaultValue(Integer value)
     parameters:
-    - id: p_0
+    - id: value
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -121,14 +124,14 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetLinkName(String)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkName(String)
   type: Method
-  summary: "\nDisplay text for link.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetLinkName(String linkName)
     parameters:
     - id: linkName
       type: CRMScript.Global.String
-      description: 
+      description: Display text for link.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -143,14 +146,14 @@ items:
   nameWithType: NSFieldInfoDynamicLink.SetLinkValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoDynamicLink.SetLinkValue(String)
   type: Method
-  summary: "\nURL link value. May contain CS tags to be replaced.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetLinkValue(String linkValue)
     parameters:
     - id: linkValue
       type: CRMScript.Global.String
-      description: 
+      description: URL link value. May contain CS tags to be replaced.
     return:
       type: CRMScript.Global.Void
   example: 
