--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoInt.yml
@@ -6,8 +6,8 @@ items:
   langs:
   - crmscript
   children:
-  - CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoInt.#ctor
+  - CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoInt.SetDefaultValue(Integer)
   name: NSFieldInfoInt
   nameWithType: NSFieldInfoInt
@@ -15,25 +15,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoInt.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoInt.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
-  type: Method
-  summary: "\nDefault integer value\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoInt thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoInt.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoInt.#ctor
   id: '#ctor'
@@ -49,6 +30,26 @@ items:
   syntax: 
     content: NSFieldInfoInt
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoInt.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoInt.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoInt.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Default integer value
+  example: 
+  - "\n<pre><code>NSFieldInfoInt thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoInt.SetDefaultValue(Integer)
   commentId: M:CRMScript.NetServer.NSFieldInfoInt.SetDefaultValue(Integer)
   id: 'SetDefaultValue(Integer)'
@@ -59,14 +60,14 @@ items:
   nameWithType: NSFieldInfoInt.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoInt.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault integer value\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.Integer
-      description: 
+      description: Default integer value
     return:
       type: CRMScript.Global.Void
   example: 
