--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoLongText.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoLongText.#ctor
   - CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
   - CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
   - CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
   - CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
-  - CRMScript.NetServer.NSFieldInfoLongText.#ctor
   - CRMScript.NetServer.NSFieldInfoLongText.SetChoices(String[])
   - CRMScript.NetServer.NSFieldInfoLongText.SetDefaultValue(String)
   - CRMScript.NetServer.NSFieldInfoLongText.SetIsHtml(Bool)
@@ -23,100 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
-  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
-  id: 'GetChoices()'
-  so.intellisense: NSFieldInfoLongText.GetChoices
-  langs:
-  - crmscript
-  name: 'GetChoices()'
-  nameWithType: NSFieldInfoLongText.GetChoices()
-  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
-  type: Method
-  summary: "\nList of items to choose from. Null = not a dropdown list.<p></p>\n<ul><li><strong>Returns:</strong>StringArray</li></ul>\n"
-  remarks: 
-  syntax: 
-    content: GetChoices()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoLongText.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoLongText.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
-  type: Method
-  summary: "\nDefault string value\n"
-  remarks: 
-  syntax: 
-    content: String GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoLongText thing;\nString defaultValue = thing.GetDefaultValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
-  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
-  id: 'GetIsHtml()'
-  so.intellisense: NSFieldInfoLongText.GetIsHtml
-  langs:
-  - crmscript
-  name: 'GetIsHtml()'
-  nameWithType: NSFieldInfoLongText.GetIsHtml()
-  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
-  type: Method
-  summary: "\nDo not escape HTML in field when displaying contents.\n"
-  remarks: 
-  syntax: 
-    content: Bool GetIsHtml()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoLongText thing;\nBool isHtml = thing.GetIsHtml();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
-  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
-  id: 'GetNumRows()'
-  so.intellisense: NSFieldInfoLongText.GetNumRows
-  langs:
-  - crmscript
-  name: 'GetNumRows()'
-  nameWithType: NSFieldInfoLongText.GetNumRows()
-  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
-  type: Method
-  summary: "\nNumber of lines of text to show. Text area height.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetNumRows()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoLongText thing;\nInteger numRows = thing.GetNumRows();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
-  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
-  id: 'GetUseTextArea()'
-  so.intellisense: NSFieldInfoLongText.GetUseTextArea
-  langs:
-  - crmscript
-  name: 'GetUseTextArea()'
-  nameWithType: NSFieldInfoLongText.GetUseTextArea()
-  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
-  type: Method
-  summary: "\nUse a multi-line text area?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseTextArea()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoLongText thing;\nBool useTextArea = thing.GetUseTextArea();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoLongText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoLongText.#ctor
   id: '#ctor'
@@ -132,6 +38,105 @@ items:
   syntax: 
     content: NSFieldInfoLongText
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
+  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
+  id: 'GetChoices()'
+  so.intellisense: NSFieldInfoLongText.GetChoices
+  langs:
+  - crmscript
+  name: 'GetChoices()'
+  nameWithType: NSFieldInfoLongText.GetChoices()
+  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetChoices()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetChoices()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: List of items to choose from. Null = not a dropdown list.
+  example: 
+- uid: CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoLongText.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoLongText.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Default string value
+  example: 
+  - "\n<pre><code>NSFieldInfoLongText thing;\nString defaultValue = thing.GetDefaultValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
+  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
+  id: 'GetIsHtml()'
+  so.intellisense: NSFieldInfoLongText.GetIsHtml
+  langs:
+  - crmscript
+  name: 'GetIsHtml()'
+  nameWithType: NSFieldInfoLongText.GetIsHtml()
+  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetIsHtml()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetIsHtml()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Do not escape HTML in field when displaying contents.
+  example: 
+  - "\n<pre><code>NSFieldInfoLongText thing;\nBool isHtml = thing.GetIsHtml();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
+  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
+  id: 'GetNumRows()'
+  so.intellisense: NSFieldInfoLongText.GetNumRows
+  langs:
+  - crmscript
+  name: 'GetNumRows()'
+  nameWithType: NSFieldInfoLongText.GetNumRows()
+  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetNumRows()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetNumRows()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Number of lines of text to show. Text area height.
+  example: 
+  - "\n<pre><code>NSFieldInfoLongText thing;\nInteger numRows = thing.GetNumRows();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
+  commentId: M:CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
+  id: 'GetUseTextArea()'
+  so.intellisense: NSFieldInfoLongText.GetUseTextArea
+  langs:
+  - crmscript
+  name: 'GetUseTextArea()'
+  nameWithType: NSFieldInfoLongText.GetUseTextArea()
+  fullName: CRMScript.NetServer.NSFieldInfoLongText.GetUseTextArea()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseTextArea()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Use a multi-line text area?
+  example: 
+  - "\n<pre><code>NSFieldInfoLongText thing;\nBool useTextArea = thing.GetUseTextArea();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoLongText.SetChoices(String[])
   commentId: M:CRMScript.NetServer.NSFieldInfoLongText.SetChoices(String[])
   id: 'SetChoices(String[])'
@@ -142,14 +147,14 @@ items:
   nameWithType: NSFieldInfoLongText.SetChoices(String[])
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetChoices(String[])
   type: Method
-  summary: "\nList of items to choose from. Null = not a dropdown list.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
-    content: Void SetChoices(String[] p_0)
+    content: Void SetChoices(String[] choices)
     parameters:
-    - id: p_0
+    - id: choices
       type: CRMScript.Global.String[]
-      description: 
+      description: List of items to choose from. Null = not a dropdown list.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -163,14 +168,14 @@ items:
   nameWithType: NSFieldInfoLongText.SetDefaultValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetDefaultValue(String)
   type: Method
-  summary: "\nDefault string value\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(String defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.String
-      description: 
+      description: Default string value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -185,14 +190,14 @@ items:
   nameWithType: NSFieldInfoLongText.SetIsHtml(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetIsHtml(Bool)
   type: Method
-  summary: "\nDo not escape HTML in field when displaying contents.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetIsHtml(Bool isHtml)
     parameters:
     - id: isHtml
       type: CRMScript.Global.Bool
-      description: 
+      description: Do not escape HTML in field when displaying contents.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -207,14 +212,14 @@ items:
   nameWithType: NSFieldInfoLongText.SetNumRows(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetNumRows(Integer)
   type: Method
-  summary: "\nNumber of lines of text to show. Text area height.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetNumRows(Integer numRows)
     parameters:
     - id: numRows
       type: CRMScript.Global.Integer
-      description: 
+      description: Number of lines of text to show. Text area height.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -229,14 +234,14 @@ items:
   nameWithType: NSFieldInfoLongText.SetUseTextArea(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoLongText.SetUseTextArea(Bool)
   type: Method
-  summary: "\nUse a multi-line text area?\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseTextArea(Bool useTextArea)
     parameters:
     - id: useTextArea
       type: CRMScript.Global.Bool
-      description: 
+      description: Use a multi-line text area?
     return:
       type: CRMScript.Global.Void
   example: 
