--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoMdoList.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoMdoList.yml
@@ -6,9 +6,9 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   - CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
-  - CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   - CRMScript.NetServer.NSFieldInfoMdoList.SetDefaultValue(Integer)
   - CRMScript.NetServer.NSFieldInfoMdoList.SetMdoListName(String)
   name: NSFieldInfoMdoList
@@ -17,44 +17,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoMdoList.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoMdoList.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
-  type: Method
-  summary: "\nDefault list item ID\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoMdoList thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
-  commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
-  id: 'GetMdoListName()'
-  so.intellisense: NSFieldInfoMdoList.GetMdoListName
-  langs:
-  - crmscript
-  name: 'GetMdoListName()'
-  nameWithType: NSFieldInfoMdoList.GetMdoListName()
-  fullName: CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
-  type: Method
-  summary: "\nMDO list name used to populate this list. (Read-only)\n"
-  remarks: 
-  syntax: 
-    content: String GetMdoListName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoMdoList thing;\nString mdoListName = thing.GetMdoListName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.#ctor
   id: '#ctor'
@@ -70,6 +32,46 @@ items:
   syntax: 
     content: NSFieldInfoMdoList
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoMdoList.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoMdoList.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoMdoList.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Default list item ID
+  example: 
+  - "\n<pre><code>NSFieldInfoMdoList thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
+  commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
+  id: 'GetMdoListName()'
+  so.intellisense: NSFieldInfoMdoList.GetMdoListName
+  langs:
+  - crmscript
+  name: 'GetMdoListName()'
+  nameWithType: NSFieldInfoMdoList.GetMdoListName()
+  fullName: CRMScript.NetServer.NSFieldInfoMdoList.GetMdoListName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetMdoListName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: MDO list name used to populate this list. (Read-only)
+  example: 
+  - "\n<pre><code>NSFieldInfoMdoList thing;\nString mdoListName = thing.GetMdoListName();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoMdoList.SetDefaultValue(Integer)
   commentId: M:CRMScript.NetServer.NSFieldInfoMdoList.SetDefaultValue(Integer)
   id: 'SetDefaultValue(Integer)'
@@ -80,14 +82,14 @@ items:
   nameWithType: NSFieldInfoMdoList.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoMdoList.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault list item ID\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.Integer
-      description: 
+      description: Default list item ID
     return:
       type: CRMScript.Global.Void
   example: 
@@ -102,14 +104,14 @@ items:
   nameWithType: NSFieldInfoMdoList.SetMdoListName(String)
   fullName: CRMScript.NetServer.NSFieldInfoMdoList.SetMdoListName(String)
   type: Method
-  summary: "\nMDO list name used to populate this list. (Read-only)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetMdoListName(String mdoListName)
     parameters:
     - id: mdoListName
       type: CRMScript.Global.String
-      description: 
+      description: MDO list name used to populate this list. (Read-only)
     return:
       type: CRMScript.Global.Void
   example: 
