--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoRelation.yml
@@ -6,12 +6,12 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoRelation.#ctor
   - CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
   - CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
   - CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
   - CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
-  - CRMScript.NetServer.NSFieldInfoRelation.#ctor
   - CRMScript.NetServer.NSFieldInfoRelation.SetDefaultValue(Integer)
   - CRMScript.NetServer.NSFieldInfoRelation.SetMdoListName(String)
   - CRMScript.NetServer.NSFieldInfoRelation.SetTargetLabel(String)
@@ -23,101 +23,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoRelation.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoRelation.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
-  type: Method
-  summary: "\nDefault record id.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoRelation thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
-  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
-  id: 'GetMdoListName()'
-  so.intellisense: NSFieldInfoRelation.GetMdoListName
-  langs:
-  - crmscript
-  name: 'GetMdoListName()'
-  nameWithType: NSFieldInfoRelation.GetMdoListName()
-  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
-  type: Method
-  summary: "\nMDO list name used to populate this list. (Read-only* derived from TargetTable)\n"
-  remarks: 
-  syntax: 
-    content: String GetMdoListName()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoRelation thing;\nString mdoListName = thing.GetMdoListName();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
-  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
-  id: 'GetTargetLabel()'
-  so.intellisense: NSFieldInfoRelation.GetTargetLabel
-  langs:
-  - crmscript
-  name: 'GetTargetLabel()'
-  nameWithType: NSFieldInfoRelation.GetTargetLabel()
-  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
-  type: Method
-  summary: "\nDisplay name on target entity.\n"
-  remarks: 
-  syntax: 
-    content: String GetTargetLabel()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoRelation thing;\nString targetLabel = thing.GetTargetLabel();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
-  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
-  id: 'GetTargetTable()'
-  so.intellisense: NSFieldInfoRelation.GetTargetTable
-  langs:
-  - crmscript
-  name: 'GetTargetTable()'
-  nameWithType: NSFieldInfoRelation.GetTargetTable()
-  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
-  type: Method
-  summary: "\nName of target table: 'contact', 'y_equipment'\n"
-  remarks: 
-  syntax: 
-    content: String GetTargetTable()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoRelation thing;\nString targetTable = thing.GetTargetTable();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
-  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
-  id: 'GetUseDropDown()'
-  so.intellisense: NSFieldInfoRelation.GetUseDropDown
-  langs:
-  - crmscript
-  name: 'GetUseDropDown()'
-  nameWithType: NSFieldInfoRelation.GetUseDropDown()
-  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
-  type: Method
-  summary: "\nShow as dropdown list on target?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseDropDown()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoRelation thing;\nBool useDropDown = thing.GetUseDropDown();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoRelation.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoRelation.#ctor
   id: '#ctor'
@@ -133,6 +38,106 @@ items:
   syntax: 
     content: NSFieldInfoRelation
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoRelation.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoRelation.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Default record ID.
+  example: 
+  - "\n<pre><code>NSFieldInfoRelation thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
+  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
+  id: 'GetMdoListName()'
+  so.intellisense: NSFieldInfoRelation.GetMdoListName
+  langs:
+  - crmscript
+  name: 'GetMdoListName()'
+  nameWithType: NSFieldInfoRelation.GetMdoListName()
+  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetMdoListName()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetMdoListName()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: MDO list name used to populate this list. (Read-only, derived from TargetTable)
+  example: 
+  - "\n<pre><code>NSFieldInfoRelation thing;\nString mdoListName = thing.GetMdoListName();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
+  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
+  id: 'GetTargetLabel()'
+  so.intellisense: NSFieldInfoRelation.GetTargetLabel
+  langs:
+  - crmscript
+  name: 'GetTargetLabel()'
+  nameWithType: NSFieldInfoRelation.GetTargetLabel()
+  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetLabel()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTargetLabel()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Display name on target entity.
+  example: 
+  - "\n<pre><code>NSFieldInfoRelation thing;\nString targetLabel = thing.GetTargetLabel();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
+  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
+  id: 'GetTargetTable()'
+  so.intellisense: NSFieldInfoRelation.GetTargetTable
+  langs:
+  - crmscript
+  name: 'GetTargetTable()'
+  nameWithType: NSFieldInfoRelation.GetTargetTable()
+  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetTargetTable()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetTargetTable()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Name of target table 'contact', 'y_equipment'
+  example: 
+  - "\n<pre><code>NSFieldInfoRelation thing;\nString targetTable = thing.GetTargetTable();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
+  commentId: M:CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
+  id: 'GetUseDropDown()'
+  so.intellisense: NSFieldInfoRelation.GetUseDropDown
+  langs:
+  - crmscript
+  name: 'GetUseDropDown()'
+  nameWithType: NSFieldInfoRelation.GetUseDropDown()
+  fullName: CRMScript.NetServer.NSFieldInfoRelation.GetUseDropDown()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseDropDown()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Show as dropdown list on target?
+  example: 
+  - "\n<pre><code>NSFieldInfoRelation thing;\nBool useDropDown = thing.GetUseDropDown();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoRelation.SetDefaultValue(Integer)
   commentId: M:CRMScript.NetServer.NSFieldInfoRelation.SetDefaultValue(Integer)
   id: 'SetDefaultValue(Integer)'
@@ -143,14 +148,14 @@ items:
   nameWithType: NSFieldInfoRelation.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault record id.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.Integer
-      description: 
+      description: Default record ID.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -165,14 +170,14 @@ items:
   nameWithType: NSFieldInfoRelation.SetMdoListName(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetMdoListName(String)
   type: Method
-  summary: "\nMDO list name used to populate this list. (Read-only* derived from TargetTable)\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetMdoListName(String mdoListName)
     parameters:
     - id: mdoListName
       type: CRMScript.Global.String
-      description: 
+      description: MDO list name used to populate this list. (Read-only, derived from TargetTable)
     return:
       type: CRMScript.Global.Void
   example: 
@@ -187,14 +192,14 @@ items:
   nameWithType: NSFieldInfoRelation.SetTargetLabel(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetTargetLabel(String)
   type: Method
-  summary: "\nDisplay name on target entity.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTargetLabel(String targetLabel)
     parameters:
     - id: targetLabel
       type: CRMScript.Global.String
-      description: 
+      description: Display name on target entity.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -209,14 +214,14 @@ items:
   nameWithType: NSFieldInfoRelation.SetTargetTable(String)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetTargetTable(String)
   type: Method
-  summary: "\nName of target table: 'contact', 'y_equipment'\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTargetTable(String targetTable)
     parameters:
     - id: targetTable
       type: CRMScript.Global.String
-      description: 
+      description: Name of target table 'contact', 'y_equipment'
     return:
       type: CRMScript.Global.Void
   example: 
@@ -231,14 +236,14 @@ items:
   nameWithType: NSFieldInfoRelation.SetUseDropDown(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoRelation.SetUseDropDown(Bool)
   type: Method
-  summary: "\nShow as dropdown list on target?\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseDropDown(Bool useDropDown)
     parameters:
     - id: useDropDown
       type: CRMScript.Global.Bool
-      description: 
+      description: Show as dropdown list on target?
     return:
       type: CRMScript.Global.Void
   example: 
