--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoTimeSpan.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoTimeSpan.yml
@@ -6,11 +6,11 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   - CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
   - CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
   - CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
-  - CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   - CRMScript.NetServer.NSFieldInfoTimeSpan.SetDefaultValue(Integer)
   - CRMScript.NetServer.NSFieldInfoTimeSpan.SetUseDays(Bool)
   - CRMScript.NetServer.NSFieldInfoTimeSpan.SetUseHours(Bool)
@@ -21,82 +21,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoTimeSpan.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoTimeSpan.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
-  type: Method
-  summary: "\nDefault Timespan value* number of minutes.\n"
-  remarks: 
-  syntax: 
-    content: Integer GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
-  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
-  id: 'GetUseDays()'
-  so.intellisense: NSFieldInfoTimeSpan.GetUseDays
-  langs:
-  - crmscript
-  name: 'GetUseDays()'
-  nameWithType: NSFieldInfoTimeSpan.GetUseDays()
-  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
-  type: Method
-  summary: "\nShould the time-span be counted in days?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseDays()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useDays = thing.GetUseDays();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
-  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
-  id: 'GetUseHours()'
-  so.intellisense: NSFieldInfoTimeSpan.GetUseHours
-  langs:
-  - crmscript
-  name: 'GetUseHours()'
-  nameWithType: NSFieldInfoTimeSpan.GetUseHours()
-  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
-  type: Method
-  summary: "\nShould the time-span be counted in hours?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseHours()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useHours = thing.GetUseHours();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
-  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
-  id: 'GetUseMinutes()'
-  so.intellisense: NSFieldInfoTimeSpan.GetUseMinutes
-  langs:
-  - crmscript
-  name: 'GetUseMinutes()'
-  nameWithType: NSFieldInfoTimeSpan.GetUseMinutes()
-  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
-  type: Method
-  summary: "\nShould the time-span be counted in minutes?\n"
-  remarks: 
-  syntax: 
-    content: Bool GetUseMinutes()
-    parameters: []
-    return:
-      type: CRMScript.Global.Bool
-  example: 
-  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useMinutes = thing.GetUseMinutes();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.#ctor
   id: '#ctor'
@@ -112,6 +36,86 @@ items:
   syntax: 
     content: NSFieldInfoTimeSpan
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoTimeSpan.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoTimeSpan.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Default TimeSpan value, number of minutes.
+  example: 
+  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nInteger defaultValue = thing.GetDefaultValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
+  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
+  id: 'GetUseDays()'
+  so.intellisense: NSFieldInfoTimeSpan.GetUseDays
+  langs:
+  - crmscript
+  name: 'GetUseDays()'
+  nameWithType: NSFieldInfoTimeSpan.GetUseDays()
+  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseDays()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseDays()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Should the time-span be counted in days?
+  example: 
+  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useDays = thing.GetUseDays();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
+  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
+  id: 'GetUseHours()'
+  so.intellisense: NSFieldInfoTimeSpan.GetUseHours
+  langs:
+  - crmscript
+  name: 'GetUseHours()'
+  nameWithType: NSFieldInfoTimeSpan.GetUseHours()
+  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseHours()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseHours()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Should the time-span be counted in hours?
+  example: 
+  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useHours = thing.GetUseHours();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
+  commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
+  id: 'GetUseMinutes()'
+  so.intellisense: NSFieldInfoTimeSpan.GetUseMinutes
+  langs:
+  - crmscript
+  name: 'GetUseMinutes()'
+  nameWithType: NSFieldInfoTimeSpan.GetUseMinutes()
+  fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.GetUseMinutes()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Bool GetUseMinutes()
+    parameters: []
+    return:
+      type: CRMScript.Global.Bool
+      description: Should the time-span be counted in minutes?
+  example: 
+  - "\n<pre><code>NSFieldInfoTimeSpan thing;\nBool useMinutes = thing.GetUseMinutes();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoTimeSpan.SetDefaultValue(Integer)
   commentId: M:CRMScript.NetServer.NSFieldInfoTimeSpan.SetDefaultValue(Integer)
   id: 'SetDefaultValue(Integer)'
@@ -122,14 +126,14 @@ items:
   nameWithType: NSFieldInfoTimeSpan.SetDefaultValue(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.SetDefaultValue(Integer)
   type: Method
-  summary: "\nDefault Timespan value* number of minutes.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(Integer defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.Integer
-      description: 
+      description: Default TimeSpan value, number of minutes.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -144,14 +148,14 @@ items:
   nameWithType: NSFieldInfoTimeSpan.SetUseDays(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.SetUseDays(Bool)
   type: Method
-  summary: "\nShould the time-span be counted in days?\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseDays(Bool useDays)
     parameters:
     - id: useDays
       type: CRMScript.Global.Bool
-      description: 
+      description: Should the time-span be counted in days?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -166,14 +170,14 @@ items:
   nameWithType: NSFieldInfoTimeSpan.SetUseHours(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.SetUseHours(Bool)
   type: Method
-  summary: "\nShould the time-span be counted in hours?\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseHours(Bool useHours)
     parameters:
     - id: useHours
       type: CRMScript.Global.Bool
-      description: 
+      description: Should the time-span be counted in hours?
     return:
       type: CRMScript.Global.Void
   example: 
@@ -188,14 +192,14 @@ items:
   nameWithType: NSFieldInfoTimeSpan.SetUseMinutes(Bool)
   fullName: CRMScript.NetServer.NSFieldInfoTimeSpan.SetUseMinutes(Bool)
   type: Method
-  summary: "\nShould the time-span be counted in minutes?\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetUseMinutes(Bool useMinutes)
     parameters:
     - id: useMinutes
       type: CRMScript.Global.Bool
-      description: 
+      description: Should the time-span be counted in minutes?
     return:
       type: CRMScript.Global.Void
   example: 
