--- a/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldRight.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldRight.#ctor
   - CRMScript.NetServer.NSFieldRight.GetFieldRight()
   - CRMScript.NetServer.NSFieldRight.GetMask()
   - CRMScript.NetServer.NSFieldRight.GetReason()
-  - CRMScript.NetServer.NSFieldRight.#ctor
   - CRMScript.NetServer.NSFieldRight.SetFieldRight(Integer)
   - CRMScript.NetServer.NSFieldRight.SetMask(Integer)
   - CRMScript.NetServer.NSFieldRight.SetReason(String)
@@ -18,60 +18,6 @@ items:
   fullName: CRMScript.NetServer.NSFieldRight
   type: Class
   summary: 
-  example: 
-- uid: CRMScript.NetServer.NSFieldRight.GetFieldRight()
-  commentId: M:CRMScript.NetServer.NSFieldRight.GetFieldRight()
-  id: 'GetFieldRight()'
-  so.intellisense: NSFieldRight.GetFieldRight
-  langs:
-  - crmscript
-  name: 'GetFieldRight()'
-  nameWithType: NSFieldRight.GetFieldRight()
-  fullName: CRMScript.NetServer.NSFieldRight.GetFieldRight()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetFieldRight()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSFieldRight.GetMask()
-  commentId: M:CRMScript.NetServer.NSFieldRight.GetMask()
-  id: 'GetMask()'
-  so.intellisense: NSFieldRight.GetMask
-  langs:
-  - crmscript
-  name: 'GetMask()'
-  nameWithType: NSFieldRight.GetMask()
-  fullName: CRMScript.NetServer.NSFieldRight.GetMask()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetMask()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
-  example: 
-- uid: CRMScript.NetServer.NSFieldRight.GetReason()
-  commentId: M:CRMScript.NetServer.NSFieldRight.GetReason()
-  id: 'GetReason()'
-  so.intellisense: NSFieldRight.GetReason
-  langs:
-  - crmscript
-  name: 'GetReason()'
-  nameWithType: NSFieldRight.GetReason()
-  fullName: CRMScript.NetServer.NSFieldRight.GetReason()
-  type: Method
-  summary: 
-  remarks: 
-  syntax: 
-    content: GetReason()
-    parameters: []
-    return:
-      type: CRMScript.Global.Void
   example: 
 - uid: CRMScript.NetServer.NSFieldRight.#ctor
   commentId: M:CRMScript.NetServer.NSFieldRight.#ctor
@@ -88,6 +34,62 @@ items:
   syntax: 
     content: NSFieldRight
   example: 
+- uid: CRMScript.NetServer.NSFieldRight.GetFieldRight()
+  commentId: M:CRMScript.NetServer.NSFieldRight.GetFieldRight()
+  id: 'GetFieldRight()'
+  so.intellisense: NSFieldRight.GetFieldRight
+  langs:
+  - crmscript
+  name: 'GetFieldRight()'
+  nameWithType: NSFieldRight.GetFieldRight()
+  fullName: CRMScript.NetServer.NSFieldRight.GetFieldRight()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetFieldRight()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description:
+  example: 
+- uid: CRMScript.NetServer.NSFieldRight.GetMask()
+  commentId: M:CRMScript.NetServer.NSFieldRight.GetMask()
+  id: 'GetMask()'
+  so.intellisense: NSFieldRight.GetMask
+  langs:
+  - crmscript
+  name: 'GetMask()'
+  nameWithType: NSFieldRight.GetMask()
+  fullName: CRMScript.NetServer.NSFieldRight.GetMask()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetMask()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+  example: 
+- uid: CRMScript.NetServer.NSFieldRight.GetReason()
+  commentId: M:CRMScript.NetServer.NSFieldRight.GetReason()
+  id: 'GetReason()'
+  so.intellisense: NSFieldRight.GetReason
+  langs:
+  - crmscript
+  name: 'GetReason()'
+  nameWithType: NSFieldRight.GetReason()
+  fullName: CRMScript.NetServer.NSFieldRight.GetReason()
+  type: Method
+  summary: 
+  remarks: 
+  syntax: 
+    content: Integer GetReason()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: 
+  example: 
 - uid: CRMScript.NetServer.NSFieldRight.SetFieldRight(Integer)
   commentId: M:CRMScript.NetServer.NSFieldRight.SetFieldRight(Integer)
   id: 'SetFieldRight(Integer)'
@@ -101,9 +103,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetFieldRight(Integer p_0)
+    content: Void SetFieldRight(Integer fieldRight)
     parameters:
-    - id: p_0
+    - id: fieldRight
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -122,9 +124,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetMask(Integer p_0)
+    content: Void SetMask(Integer mask)
     parameters:
-    - id: p_0
+    - id: mask
       type: CRMScript.Global.Integer
       description: 
     return:
@@ -143,9 +145,9 @@ items:
   summary: 
   remarks: 
   syntax: 
-    content: Void SetReason(String p_0)
+    content: Void SetReason(String reason)
     parameters:
-    - id: p_0
+    - id: reason
       type: CRMScript.Global.String
       description: 
     return:
