--- a/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSListAgent.yml
@@ -2391,7 +2391,7 @@ items:
     parameters:
     - id: documentTemplateId
       type: CRMScript.Global.Integer
-      description: The primary key id of the document template
+      description: The primary key ID of the document template
     - id: requestedProperties
       type: CRMScript.Global.String[]
       description: An array of properties to get the values for
