--- a/docs/api-reference/CRMScript.NetServer.NSMDOAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSMDOAgent.yml
@@ -67,7 +67,7 @@ items:
   nameWithType: NSMDOAgent.GetListIdByListName(String)
   fullName: CRMScript.NetServer.NSMDOAgent.GetListIdByListName(String)
   type: Method
-  summary: "\nRetrieve the UdListDefinition id of a list, by its name. Not all lists have such an ID, but those that are based on tables do (the list name is then the same as the table name)\n"
+  summary: "\nRetrieve the UdListDefinition ID of a list, by its name. Not all lists have such an ID, but those that are based on tables do (the list name is then the same as the table name)\n"
   remarks: 
   syntax: 
     content: Integer GetListIdByListName(String name)
