--- a/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSParticipantInfo.yml
@@ -35,7 +35,7 @@ items:
   nameWithType: NSParticipantInfo.GetAssociateId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetAssociateId()
   type: Method
-  summary: "\nAssociate id of the participant if the participant is an associate (or resource)\n"
+  summary: "\nAssociate ID of the participant if the participant is an associate (or resource)\n"
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -54,7 +54,7 @@ items:
   nameWithType: NSParticipantInfo.GetContactId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetContactId()
   type: Method
-  summary: "\nContact id of the participant if the participant is an associate or person\n"
+  summary: "\nContact ID of the participant if the participant is an associate or person\n"
   remarks: 
   syntax: 
     content: Integer GetContactId()
@@ -73,7 +73,7 @@ items:
   nameWithType: NSParticipantInfo.GetEmailId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetEmailId()
   type: Method
-  summary: "\nThe email id of the email belonging to the appointment record belonging to this person\n"
+  summary: "\nThe email ID of the email belonging to the appointment record belonging to this person\n"
   remarks: 
   syntax: 
     content: Integer GetEmailId()
@@ -111,7 +111,7 @@ items:
   nameWithType: NSParticipantInfo.GetPersonId()
   fullName: CRMScript.NetServer.NSParticipantInfo.GetPersonId()
   type: Method
-  summary: "\nPerson id of the participant if the participant is a person\n"
+  summary: "\nPerson ID of the participant if the participant is a person\n"
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -164,7 +164,7 @@ items:
   nameWithType: NSParticipantInfo.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetAssociateId(Integer)
   type: Method
-  summary: "\nAssociate id of the participant if the participant is an associate (or resource)\n"
+  summary: "\nAssociate ID of the participant if the participant is an associate (or resource)\n"
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -186,7 +186,7 @@ items:
   nameWithType: NSParticipantInfo.SetContactId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetContactId(Integer)
   type: Method
-  summary: "\nContact id of the participant if the participant is an associate or person\n"
+  summary: "\nContact ID of the participant if the participant is an associate or person\n"
   remarks: 
   syntax: 
     content: Void SetContactId(Integer contactId)
@@ -208,7 +208,7 @@ items:
   nameWithType: NSParticipantInfo.SetEmailId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetEmailId(Integer)
   type: Method
-  summary: "\nThe email id of the email belonging to the appointment record belonging to this person\n"
+  summary: "\nThe email ID of the email belonging to the appointment record belonging to this person\n"
   remarks: 
   syntax: 
     content: Void SetEmailId(Integer emailId)
@@ -252,7 +252,7 @@ items:
   nameWithType: NSParticipantInfo.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSParticipantInfo.SetPersonId(Integer)
   type: Method
-  summary: "\nPerson id of the participant if the participant is a person\n"
+  summary: "\nPerson ID of the participant if the participant is a person\n"
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
