--- a/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSPreferenceDescription.yml
@@ -363,7 +363,7 @@ items:
   nameWithType: NSPreferenceDescription.GetUserDefinedListId()
   fullName: CRMScript.NetServer.NSPreferenceDescription.GetUserDefinedListId()
   type: Method
-  summary: "\nRead-only field, If valueType = 5, and TableName is UDList, then UserdefinedLIstId contains the id of the list referenced by the preference\n"
+  summary: "\nRead-only field, If valueType = 5, and TableName is UDList, then UserdefinedLIstId contains the ID of the list referenced by the preference\n"
   remarks: 
   syntax: 
     content: Integer GetUserDefinedListId()
@@ -768,7 +768,7 @@ items:
   nameWithType: NSPreferenceDescription.SetUserDefinedListId(Integer)
   fullName: CRMScript.NetServer.NSPreferenceDescription.SetUserDefinedListId(Integer)
   type: Method
-  summary: "\nRead-only field, If valueType = 5, and TableName is UDList, then UserdefinedLIstId contains the id of the list referenced by the preference\n"
+  summary: "\nRead-only field, If valueType = 5, and TableName is UDList, then UserdefinedLIstId contains the ID of the list referenced by the preference\n"
   remarks: 
   syntax: 
     content: Void SetUserDefinedListId(Integer userDefinedListId)
