--- a/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSReplicationAgent.yml
@@ -189,7 +189,7 @@ items:
   nameWithType: NSReplicationAgent.SetFreetextSearchEnabledOnArea(Integer,Bool)
   fullName: CRMScript.NetServer.NSReplicationAgent.SetFreetextSearchEnabledOnArea(Integer,Bool)
   type: Method
-  summary: "\nEnable freetext search on this area\n"
+  summary: "\nEnable free-text search on this area\n"
   remarks: 
   syntax: 
     content: Void SetFreetextSearchEnabledOnArea(Integer areaId, Bool freetextEnabled)
