--- a/docs/api-reference/CRMScript.NetServer.NSTicket.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicket.yml
@@ -292,7 +292,7 @@ items:
   nameWithType: NSTicket.GetConnectId()
   fullName: CRMScript.NetServer.NSTicket.GetConnectId()
   type: Method
-  summary: "\nIf a ticket is connected to another ticket, this field is set to the id of the 'master' ticket.\n"
+  summary: "\nIf a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.\n"
   remarks: 
   syntax: 
     content: Integer GetConnectId()
@@ -1250,7 +1250,7 @@ items:
   nameWithType: NSTicket.SetConnectId(Integer)
   fullName: CRMScript.NetServer.NSTicket.SetConnectId(Integer)
   type: Method
-  summary: "\nIf a ticket is connected to another ticket, this field is set to the id of the 'master' ticket.\n"
+  summary: "\nIf a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.\n"
   remarks: 
   syntax: 
     content: Void SetConnectId(Integer connectId)
