--- a/docs/api-reference/CRMScript.NetServer.NSTimeZoneAgent.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTimeZoneAgent.yml
@@ -91,7 +91,7 @@ items:
   nameWithType: NSTimeZoneAgent.GetDefaultTimeZonePreference()
   fullName: CRMScript.NetServer.NSTimeZoneAgent.GetDefaultTimeZonePreference()
   type: Method
-  summary: "\nReturns the id of the default timezone preference with deflevel system wide\n"
+  summary: "\nReturns the ID of the default timezone preference with deflevel system wide\n"
   remarks: 
   syntax: 
     content: Integer GetDefaultTimeZonePreference()
