--- a/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSVersionInfo.yml
@@ -41,7 +41,7 @@ items:
   nameWithType: NSVersionInfo.GetCheckedInByAssociateId()
   fullName: CRMScript.NetServer.NSVersionInfo.GetCheckedInByAssociateId()
   type: Method
-  summary: "\nAssociate id of the user who performed the checkin\n"
+  summary: "\nAssociate ID of the user who performed the checkin\n"
   remarks: 
   syntax: 
     content: Integer GetCheckedInByAssociateId()
@@ -227,7 +227,7 @@ items:
   nameWithType: NSVersionInfo.SetCheckedInByAssociateId(Integer)
   fullName: CRMScript.NetServer.NSVersionInfo.SetCheckedInByAssociateId(Integer)
   type: Method
-  summary: "\nAssociate id of the user who performed the checkin\n"
+  summary: "\nAssociate ID of the user who performed the checkin\n"
   remarks: 
   syntax: 
     content: Void SetCheckedInByAssociateId(Integer checkedInByAssociateId)
