--- a/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSWindowPosSize.yml
@@ -45,7 +45,7 @@ items:
   nameWithType: NSWindowPosSize.GetAssociateId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetAssociateId()
   type: Method
-  summary: "\nAssociate id of the Associate/Person owning this window setting\n"
+  summary: "\nAssociate ID of the Associate/Person owning this window setting\n"
   remarks: 
   syntax: 
     content: Integer GetAssociateId()
@@ -159,7 +159,7 @@ items:
   nameWithType: NSWindowPosSize.GetPersonId()
   fullName: CRMScript.NetServer.NSWindowPosSize.GetPersonId()
   type: Method
-  summary: "\nPerson id of the associate owning this window setting\n"
+  summary: "\nPerson ID of the associate owning this window setting\n"
   remarks: 
   syntax: 
     content: Integer GetPersonId()
@@ -269,7 +269,7 @@ items:
   nameWithType: NSWindowPosSize.SetAssociateId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetAssociateId(Integer)
   type: Method
-  summary: "\nAssociate id of the Associate/Person owning this window setting\n"
+  summary: "\nAssociate ID of the Associate/Person owning this window setting\n"
   remarks: 
   syntax: 
     content: Void SetAssociateId(Integer associateId)
@@ -401,7 +401,7 @@ items:
   nameWithType: NSWindowPosSize.SetPersonId(Integer)
   fullName: CRMScript.NetServer.NSWindowPosSize.SetPersonId(Integer)
   type: Method
-  summary: "\nPerson id of the associate owning this window setting\n"
+  summary: "\nPerson ID of the associate owning this window setting\n"
   remarks: 
   syntax: 
     content: Void SetPersonId(Integer personId)
