--- a/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSFieldInfoListText.yml
@@ -6,10 +6,10 @@ items:
   langs:
   - crmscript
   children:
+  - CRMScript.NetServer.NSFieldInfoListText.#ctor
   - CRMScript.NetServer.NSFieldInfoListText.GetChoices()
   - CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
   - CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
-  - CRMScript.NetServer.NSFieldInfoListText.#ctor
   - CRMScript.NetServer.NSFieldInfoListText.SetChoices(String[])
   - CRMScript.NetServer.NSFieldInfoListText.SetDefaultValue(String)
   - CRMScript.NetServer.NSFieldInfoListText.SetTextLength(Integer)
@@ -19,63 +19,6 @@ items:
   type: Class
   summary: 
   example: 
-- uid: CRMScript.NetServer.NSFieldInfoListText.GetChoices()
-  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetChoices()
-  id: 'GetChoices()'
-  so.intellisense: NSFieldInfoListText.GetChoices
-  langs:
-  - crmscript
-  name: 'GetChoices()'
-  nameWithType: NSFieldInfoListText.GetChoices()
-  fullName: CRMScript.NetServer.NSFieldInfoListText.GetChoices()
-  type: Method
-  summary: "\nList of items to choose from.<p></p>\n<strong>Returns:</strong>String[]<p></p>\n<pre><code>NSFieldInfoListText thing;\nString[] choices = thing.GetChoices();</code></pre>\n"
-  remarks: 
-  syntax: 
-    content: String[] GetChoices()
-    parameters: []
-    return:
-      type: CRMScript.Global.String[]
-  example: 
-  - "\n<pre><code>NSFieldInfoListText thing;\nString[] choices = thing.GetChoices();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
-  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
-  id: 'GetDefaultValue()'
-  so.intellisense: NSFieldInfoListText.GetDefaultValue
-  langs:
-  - crmscript
-  name: 'GetDefaultValue()'
-  nameWithType: NSFieldInfoListText.GetDefaultValue()
-  fullName: CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
-  type: Method
-  summary: "\nDefault string value\n"
-  remarks: 
-  syntax: 
-    content: String GetDefaultValue()
-    parameters: []
-    return:
-      type: CRMScript.Global.String
-  example: 
-  - "\n<pre><code>NSFieldInfoListText thing;\nString defaultValue = thing.GetDefaultValue();</code></pre>\n"
-- uid: CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
-  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
-  id: 'GetTextLength()'
-  so.intellisense: NSFieldInfoListText.GetTextLength
-  langs:
-  - crmscript
-  name: 'GetTextLength()'
-  nameWithType: NSFieldInfoListText.GetTextLength()
-  fullName: CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
-  type: Method
-  summary: "\nLength (in characters) of a text field, 0 for other types\n"
-  remarks: 
-  syntax: 
-    content: Integer GetTextLength()
-    parameters: []
-    return:
-      type: CRMScript.Global.Integer
-  example: 
-  - "\n<pre><code>NSFieldInfoListText thing;\nInteger textLength = thing.GetTextLength();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoListText.#ctor
   commentId: M:CRMScript.NetServer.NSFieldInfoListText.#ctor
   id: '#ctor'
@@ -91,6 +34,66 @@ items:
   syntax: 
     content: NSFieldInfoListText
   example: 
+- uid: CRMScript.NetServer.NSFieldInfoListText.GetChoices()
+  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetChoices()
+  id: 'GetChoices()'
+  so.intellisense: NSFieldInfoListText.GetChoices
+  langs:
+  - crmscript
+  name: 'GetChoices()'
+  nameWithType: NSFieldInfoListText.GetChoices()
+  fullName: CRMScript.NetServer.NSFieldInfoListText.GetChoices()
+  type: Method
+  summary: ""
+  remarks: 
+  syntax: 
+    content: String[] GetChoices()
+    parameters: []
+    return:
+      type: CRMScript.Global.String[]
+      description: List of items to choose from.
+  example: 
+  - "\n<pre><code>NSFieldInfoListText thing;\nString[] choices = thing.GetChoices();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
+  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
+  id: 'GetDefaultValue()'
+  so.intellisense: NSFieldInfoListText.GetDefaultValue
+  langs:
+  - crmscript
+  name: 'GetDefaultValue()'
+  nameWithType: NSFieldInfoListText.GetDefaultValue()
+  fullName: CRMScript.NetServer.NSFieldInfoListText.GetDefaultValue()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: String GetDefaultValue()
+    parameters: []
+    return:
+      type: CRMScript.Global.String
+      description: Default string value
+  example: 
+  - "\n<pre><code>NSFieldInfoListText thing;\nString defaultValue = thing.GetDefaultValue();</code></pre>\n"
+- uid: CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
+  commentId: M:CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
+  id: 'GetTextLength()'
+  so.intellisense: NSFieldInfoListText.GetTextLength
+  langs:
+  - crmscript
+  name: 'GetTextLength()'
+  nameWithType: NSFieldInfoListText.GetTextLength()
+  fullName: CRMScript.NetServer.NSFieldInfoListText.GetTextLength()
+  type: Method
+  summary: "\n\n"
+  remarks: 
+  syntax: 
+    content: Integer GetTextLength()
+    parameters: []
+    return:
+      type: CRMScript.Global.Integer
+      description: Length (in characters) of a text field, 0 for other types
+  example: 
+  - "\n<pre><code>NSFieldInfoListText thing;\nInteger textLength = thing.GetTextLength();</code></pre>\n"
 - uid: CRMScript.NetServer.NSFieldInfoListText.SetChoices(String[])
   commentId: M:CRMScript.NetServer.NSFieldInfoListText.SetChoices(String[])
   id: 'SetChoices(String[])'
@@ -101,14 +104,14 @@ items:
   nameWithType: NSFieldInfoListText.SetChoices(String[])
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetChoices(String[])
   type: Method
-  summary: "\nList of items to choose from.\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetChoices(String[] choices)
     parameters:
     - id: choices
       type: CRMScript.Global.String[]
-      description: 
+      description: List of items to choose from.
     return:
       type: CRMScript.Global.Void
   example: 
@@ -123,14 +126,14 @@ items:
   nameWithType: NSFieldInfoListText.SetDefaultValue(String)
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetDefaultValue(String)
   type: Method
-  summary: "\nDefault string value\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetDefaultValue(String defaultValue)
     parameters:
     - id: defaultValue
       type: CRMScript.Global.String
-      description: 
+      description: Default string value
     return:
       type: CRMScript.Global.Void
   example: 
@@ -145,14 +148,14 @@ items:
   nameWithType: NSFieldInfoListText.SetTextLength(Integer)
   fullName: CRMScript.NetServer.NSFieldInfoListText.SetTextLength(Integer)
   type: Method
-  summary: "\nLength (in characters) of a text field, 0 for other types\n"
+  summary: "\n\n"
   remarks: 
   syntax: 
     content: Void SetTextLength(Integer textLength)
     parameters:
     - id: textLength
       type: CRMScript.Global.Integer
-      description: 
+      description: Length (in characters) of a text field, 0 for other types
     return:
       type: CRMScript.Global.Void
   example: 
@@ -178,12 +181,6 @@ references:
   - name: '[]'
     nameWithType: '[]'
     fullName: '[]'
-- uid: CRMScript.Global.String
-  commentId: T:CRMScript.Global.String
-  isExternal: true
-  name: String
-  nameWithType: String
-  fullName: CRMScript.Global.String
 - uid: CRMScript.Global.String
   commentId: T:CRMScript.Global.String
   isExternal: true
