--- a/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
+++ b/docs/api-reference/CRMScript.NetServer.NSTicketEntity.yml
@@ -244,7 +244,7 @@ items:
   nameWithType: NSTicketEntity.GetConnectId()
   fullName: CRMScript.NetServer.NSTicketEntity.GetConnectId()
   type: Method
-  summary: "\nIf a ticket is connected to another ticket, this field is set to the id of the 'master' ticket.\n"
+  summary: "\nIf a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.\n"
   remarks: 
   syntax: 
     content: Integer GetConnectId()
@@ -1096,7 +1096,7 @@ items:
   nameWithType: NSTicketEntity.SetConnectId(Integer)
   fullName: CRMScript.NetServer.NSTicketEntity.SetConnectId(Integer)
   type: Method
-  summary: "\nIf a ticket is connected to another ticket, this field is set to the id of the 'master' ticket.\n"
+  summary: "\nIf a ticket is connected to another ticket, this field is set to the ID of the 'master' ticket.\n"
   remarks: 
   syntax: 
     content: Void SetConnectId(Integer connectId)
